# fuegonet

./: .project  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
conf/: fuegonet.conf
doc/: .~lock.fuegonet-description.odt#  Diagram1.dia  Diagram1.dia~  fuego-net-RFC.odt  fuegonet-description.odt
include/: Makefile  Makefile.am  Makefile.in  fuegonetd.h
man/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  fuegonetd  fuegonetd.c  provider.c  requester.c
src/.deps/: fuegonetd-fuegonetd.Po  fuegonetd-provider.Po  fuegonetd-requester.Po
test/: provider  requester  requester.c
test/sim/: provider-tst.c  requester-tst.c
test/sysinfo/: showsysinfo.c  sysinfo.c
tools/sim/: Makefile  Makefile.am  Makefile.in  mc-provider.c  mc-requester.c
tools/sim/.deps/: simprovider-mc-provider.Po  simrequester-mc-provider.Po  simrequester-mc-requester.Po
tools/sysinfo/: Makefile  Makefile.am  Makefile.in  sysinfo.c
tools/sysinfo/.deps/: sysinfo-sysinfo.Po  sysvnum-sysvnum.Po
