AM_CFLAGS = @CFLAGS@
AM_LDFLAGS =
# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
# sysinfo
bin_PROGRAMS = sysinfo sysvnum
sysinfo_SOURCES = sysinfo.c
sysinfo_CFLAGS = -I$(top_srcdir)/include
# sysinfo_LDFLAGS =
# sysinfo_LDADD =

sysvnum_SOURCES = sysvnum.c
sysvnum_CFLAGS = -I$(top_srcdir)/include
# sysvnum_LDFLAGS =
# sysvnum_LDADD =